--- a/Ica4b/Ica4b.css
+++ b/Ica4b/Ica4b.css
@@ -62,7 +62,7 @@ body > * {
 }
 
 main, header, nav, article, aside, footer, section {
-  background-color: rgba(0,255,0,0.5);
+  background-color: rgba(62, 233, 255, 0.5);
   padding: 1%;
 }
 
